--- a/index.html
+++ b/index.html
@@ -1,104 +1,69 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Project</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Bakery Chef Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    * {margin:0; padding:0; box-sizing:border-box; font-family:'Poppins', sans-serif;}
+    body {background:#fffaf3; color:#333; line-height:1.6;}
+    header {background:#f7c59f; padding:20px; text-align:center;}
+    header h1 {font-size:2.5rem; color:#5c3d2e;}
+    nav {margin-top:10px;}
+    nav a {margin:0 15px; text-decoration:none; color:#5c3d2e; font-weight:600;}
+    section {padding:50px 20px; max-width:1000px; margin:auto;}
+    .hero {text-align:center; padding:80px 20px;}
+    .hero h2 {font-size:2rem; margin-bottom:15px; color:#5c3d2e;}
+    .hero p {font-size:1.1rem;}
+    .gallery {display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; margin-top:30px;}
+    .gallery img {width:100%; border-radius:15px; box-shadow:0 4px 10px rgba(0,0,0,0.1);}
+    .about, .contact {background:#fff3e6; border-radius:15px; padding:30px;}
+    footer {text-align:center; padding:20px; background:#f7c59f; color:#5c3d2e; margin-top:40px;}
+    button {padding:10px 20px; border:none; border-radius:25px; background:#5c3d2e; color:#fff; cursor:pointer;}
+    button:hover {background:#40241a;}
+  </style>
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <div class="nav-container">
-                <h1 class="nav-logo">MyProject</h1>
-                <ul class="nav-menu">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+  <header>
+    <h1>Chef Shaheen’s Bakery</h1>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-    <main>
-        <section id="home" class="hero">
-            <div class="hero-content">
-                <h2>Welcome to My GitHub Project</h2>
-                <p>A showcase of my work and skills</p>
-                <button class="cta-button" onclick="scrollToSection('projects')">View Projects</button>
-            </div>
-        </section>
+  <section class="hero">
+    <h2>Artisan Breads, Cakes & Pastries</h2>
+    <p>Welcome to my sweet world of baking! I craft handmade breads, elegant cakes, and delightful pastries with love and passion.</p>
+    <button onclick="document.getElementById('contact').scrollIntoView({behavior:'smooth'})">Hire Me</button>
+  </section>
 
-        <section id="about" class="about">
-            <div class="container">
-                <h2>About This Project</h2>
-                <p>This is a sample GitHub repository demonstrating clean HTML and CSS structure.</p>
-                <div class="features">
-                    <div class="feature">
-                        <h3>Responsive Design</h3>
-                        <p>Works on all devices</p>
-                    </div>
-                    <div class="feature">
-                        <h3>Modern CSS</h3>
-                        <p>Using Flexbox and Grid</p>
-                    </div>
-                    <div class="feature">
-                        <h3>GitHub Ready</h3>
-                        <p>Perfect for repositories</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+  <section id="about" class="about">
+    <h2>About Me</h2>
+    <p>Hello! I am Shaheen, a passionate bakery chef with years of experience in baking artisan breads, pastries, and cakes. My philosophy is to combine creativity with the finest ingredients to create unforgettable flavors and designs.</p>
+  </section>
 
-        <section id="projects" class="projects">
-            <div class="container">
-                <h2>Featured Projects</h2>
-                <div class="project-grid">
-                    <div class="project-card">
-                        <h3>Project One</h3>
-                        <p>Description of the first project</p>
-                        <a href="#" class="project-link">View on GitHub</a>
-                    </div>
-                    <div class="project-card">
-                        <h3>Project Two</h3>
-                        <p>Description of the second project</p>
-                        <a href="#" class="project-link">View on GitHub</a>
-                    </div>
-                    <div class="project-card">
-                        <h3>Project Three</h3>
-                        <p>Description of the third project</p>
-                        <a href="#" class="project-link">View on GitHub</a>
-                    </div>
-                </div>
-            </div>
-        </section>
+  <section id="portfolio">
+    <h2 style="text-align:center; color:#5c3d2e;">My Creations</h2>
+    <div class="gallery">
+      <img src="https://source.unsplash.com/400x300/?bread" alt="Bread">
+      <img src="https://source.unsplash.com/400x300/?cake" alt="Cake">
+      <img src="https://source.unsplash.com/400x300/?pastry" alt="Pastry">
+      <img src="https://source.unsplash.com/400x300/?bakery" alt="Bakery">
+    </div>
+  </section>
 
-        <section id="contact" class="contact">
-            <div class="container">
-                <h2>Get in Touch</h2>
-                <p>Feel free to reach out for collaborations or questions</p>
-                <div class="contact-info">
-                    <p>Email: your-email@example.com</p>
-                    <p>GitHub: <a href="https://github.com/yourusername">github.com/yourusername</a></p>
-                </div>
-            </div>
-        </section>
-    </main>
+  <section id="contact" class="contact">
+    <h2>Contact Me</h2>
+    <p>Let’s create something delicious together! Reach out for custom orders, collaborations, or events.</p>
+    <p>Email: <a href="mailto:roastbakery@gmail.com">roastbakery@gmail.com</a></p>
+    <p>Instagram: <a href="https://instagram.com" target="_blank">@mybakery</a></p>
+  </section>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2024 My GitHub Project. All rights reserved.</p>
-        </div>
-    </footer>
-
-    <script>
-        function scrollToSection(sectionId) {
-            document.getElementById(sectionId).scrollIntoView({
-                behavior: 'smooth'
-            });
-        }
-    </script>
+  <footer>
+    <p>© 2025 Chef Shaheen | Made with ❤️ & Flour</p>
+  </footer>
 </body>
 </html>
