--- a/index.html
+++ b/index.html
@@ -7,62 +7,67 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Header -->
-  <header>
-    <h1>Chef Shahin</h1>
-    <p>Artisan Bakery Chef | Sourdough • Brioche • Croissant</p>
+  <!-- Hero Section -->
+  <header class="hero">
+    <div class="overlay"></div>
+    <div class="hero-content">
+      <h1>Chef Shahin</h1>
+      <p>Artisan Bakery Chef | Crafted with Passion</p>
+      <a href="#contact" class="btn">Contact Me</a>
+    </div>
   </header>
 
   <!-- Navigation -->
-  <nav>
+  <nav class="navbar">
     <a href="#about">About</a>
     <a href="#skills">Skills</a>
     <a href="#gallery">Gallery</a>
     <a href="#contact">Contact</a>
   </nav>
 
-  <!-- About Section -->
-  <section id="about">
+  <!-- About -->
+  <section id="about" class="container">
     <h2>About Me</h2>
     <p>
-      I am a passionate bakery chef specializing in artisan breads and pastries. 
-      From classic sourdough to buttery croissants, I craft each bake with precision, 
-      tradition, and love for the art of baking.
+      I am a bakery chef specializing in artisan breads and fine pastries. 
+      From rustic sourdough to buttery croissants, I blend tradition with creativity 
+      to bring warmth and flavor into every bake.
     </p>
   </section>
 
-  <!-- Skills Section -->
-  <section id="skills">
+  <!-- Skills -->
+  <section id="skills" class="container">
     <h2>Signature Bakes</h2>
-    <ul>
-      <li>🥖 Sourdough</li>
-      <li>🥐 Croissant</li>
-      <li>🍞 Brioche</li>
-      <li>🥯 Bagels & English Muffins</li>
-      <li>🥪 Ciabatta & Panini</li>
-    </ul>
-  </section>
-
-  <!-- Gallery Section -->
-  <section id="gallery">
-    <h2>Gallery</h2>
-    <div class="gallery-container">
-      <img src="https://source.unsplash.com/400x300/?bread" alt="Artisan Bread">
-      <img src="https://source.unsplash.com/400x300/?croissant" alt="Croissant">
-      <img src="https://source.unsplash.com/400x300/?bakery" alt="Bakery">
+    <div class="skills-grid">
+      <div class="card">🥖 Sourdough</div>
+      <div class="card">🥐 Croissant</div>
+      <div class="card">🍞 Brioche</div>
+      <div class="card">🥯 Bagels & Muffins</div>
+      <div class="card">🥪 Ciabatta & Panini</div>
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact">
+  <!-- Gallery -->
+  <section id="gallery" class="container">
+    <h2>Gallery</h2>
+    <div class="gallery-grid">
+      <img src="https://source.unsplash.com/500x400/?bread" alt="Bread">
+      <img src="https://source.unsplash.com/500x400/?croissant" alt="Croissant">
+      <img src="https://source.unsplash.com/500x400/?bakery" alt="Bakery">
+      <img src="https://source.unsplash.com/500x400/?brioche" alt="Brioche">
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="container">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:chefshahin@example.com">chefshahin@example.com</a></p>
-    <p>Instagram: <a href="https://instagram.com/" target="_blank">@chefshahin</a></p>
+    <p>📧 Email: <a href="mailto:chefshahin@example.com">chefshahin@example.com</a></p>
+    <p>📸 Instagram: <a href="https://instagram.com/" target="_blank">@chefshahin</a></p>
   </section>
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 Chef Shahin. All Rights Reserved.</p>
+    <p>© 2025 Chef Shahin. Crafted with ❤️</p>
   </footer>
 </body>
 </html>
